--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,7 @@
         <code> 
             #include <stdio.h> 
             int main() { 
-                printf("Hello Geeks"); 
+                printf("Hello siva"); 
             } 
         </code> 
     </pre>
