--- a/hello.html
+++ b/hello.html
@@ -7,6 +7,7 @@
             #include <stdio.h> 
             int main() { 
                 printf("Hello geeksforgeeks"); 
+                printf("frontend"); 
             } 
         </code> 
     </pre>
