Add print statement in hello.html

--- a/hello.html
+++ b/hello.html
@@ -8,6 +8,7 @@
             int main() { 
                 printf("Hello geeksforgeeks"); 
                 printf("backend"); 
+                printf(" pull this bro")
             } 
         </code> 
     </pre>
